--- a/frontend/css/styles.css
+++ b/frontend/css/styles.css
@@ -39,7 +39,7 @@ body{
 }
 
 a{
-    color: #fff;
+  color: #fff;
   text-transform: uppercase;
   text-decoration: none;
   letter-spacing: 0.15em;
@@ -78,7 +78,7 @@ a:hover:after {
     font-weight: bolder;
     letter-spacing: 1.2px;
     font-size: 12px;
-    transition: color 0.7s linear;
+    transition: color 0.7s ease;
     padding: 0.6rem 1rem;
     border-radius: 4px;
     transition: 0.7s;
@@ -112,14 +112,18 @@ a:hover:after {
 .body{
     background-color: #b3d99f10;
 }
+
 .textheading{
     background-color: #b3d99f72;
-
+    display: flex;
 }
+
 .textheading h3{
     font-size: 5rem;
     font-family:'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
     font-weight: lighter;
+    text-shadow: 2px 2px 10px #fffff7;
+    color: #3a3a3a;
     text-transform: capitalize;
     text-align: center;
     display: flex;
@@ -127,13 +131,16 @@ a:hover:after {
     align-items: center;
     letter-spacing: 2px;
     line-height: 55px;
-    padding-bottom: 20px;
-    margin-bottom: 30px;
-    margin-top: -142px;
+    
 }
 .text .image{
     display: flex;
     align-self: start;
+}
+.image img{
+    height: 300px;
+    width: auto;
+    
 
 }
 
@@ -155,6 +162,7 @@ a:hover:after {
     background: url('https://cdn-icons-png.flaticon.com/512/622/622669.png') no-repeat right 20px center;
     background-size: 20px;
     margin-bottom: 30px;
+    margin-top: 30px;
 }
 
 
@@ -165,11 +173,7 @@ a:hover:after {
     font-size: 20px;
 }
 
-.image img{
-    height: 300px;
-    width: auto;
-    margin-left: -10px;
-}
+
 
 .secondsection{
     display: flex;
@@ -193,4 +197,11 @@ a:hover:after {
     height: 300px;
     width: auto;
     
+}
+
+.secondfirstimg img{
+    height: 250px;
+    width: auto;
+    transform: rotate(45deg);
+    filter: blur(1px);
 }
