--- a/frontend/css/signup.css
+++ b/frontend/css/signup.css
@@ -13,7 +13,7 @@
     /* Bubbles */
     .bubble {
       position: absolute;
-      background: #A3B18A;
+      background:  #7ba238;
       opacity: 0.18;
       border-radius: 50%;
       z-index: 0;
