--- a/frontend/css/styles.css
+++ b/frontend/css/styles.css
@@ -123,11 +123,11 @@ a:hover:after {
 }
 
 .textheading {
-    background-color: #94ff5c72;
+    background-color: #d1f9dc;
     display: flex;
     align-items: center;
     justify-content: space-between;
-    margin-top: 110px;
+    margin-top: 140px;
     
 }
 
