--- a/static/css/blog.css
+++ b/static/css/blog.css
@@ -9,7 +9,7 @@ body {
   font-family: 'Segoe UI', sans-serif;
   background-color: #faf9f6; /* Page Background */
   color: #3a3a3a; /* Text Color */
-  padding: 30px;
+  margin-top: 160px;
 }
 
 /* Layout: Content + Sidebar */
