--- a/templates/index.html
+++ b/templates/index.html
@@ -1,3 +1,4 @@
+{% load static %}
 <!DOCTYPE html>
 <html lang="en">
 
@@ -5,68 +6,21 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Home Page</title>
-    <link rel="Stylesheet" href="/frontend/css/styles.css" />
-    <link rel="shortcut icon" href="/frontend/Assets/favicon.ico" type="image/x-icon">
+    <link rel="Stylesheet" href="/static/css/styles.css" />
+    <link rel="shortcut icon" href="/static/Assets/favicon.ico" type="image/x-icon">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css">
-    <script src="/frontend/js/script.js" defer></script>
+    
 </head>
 
 <body>
-     <div class="header">
-        <a href="/frontend/html/"> 
-        <div class="leftsection">
-            <div class="logo">
-                <img src="/frontend/Assets/favicon.ico" alt="BMS Logo" />
-            </div>
-            <div class="text">
-                Digital Pathshala
-            </div>
-        </div>
-        </a>
-        <div class="hamburger">
-            <span></span>
-            <span></span>
-            <span></span>
-        </div>
-        <div class="rightsection">
-            <div class="nav">
-                <ul>
-                    <li><a href="#about">About Us</a></li> |
-                    <li><a href="#blogs">Blogs</a></li> |
-                   <li><a href="/frontend/html/add-blog.html">Write</a></li> |
-                    <li><a href="/frontend/html/login.html">Log-In</a></li> |
-                    <li><a href="#getstarted" class="getstarted-btn">Get Started</a></li>
-                </ul>
-            </div>
-        </div>
-    
-     </div>
-     
-    <!-- Sidebar Navigation -->
-    <div class="sidebar">
-        <div class="sidebar-header">
-            <div class="logo">
-                <img src="/frontend/Assets/sidebar_img.jpg" alt="BMS Logo" />
-            </div>
-            <div class="close-btn">&times;</div>
-        </div>
-        <ul class="sidebar-nav">
-            <li><a href="#about">About Us</a></li>
-            <li><a href="#blogs">Blogs</a></li>
-            <li><a href="/frontend/html/add-blog.html">Write</a></li>
-            <li><a href="/frontend/html/login.html">Log In</a></li>
-            <li><a href="#getstarted" class="getstarted-btn">Get Started</a></li>
-        </ul>
-    </div>
-    <div class="overlay"></div>
-    <!-- End for Header -->
+    {% include "header.html" %}
     <!-- Start Body -->
     <div class="body">
         <div class="firstsection">
           
             <div class="textheading">
                   <div class="image">
-                <img src="/frontend/Assets/Learning Icon.png"/>
+                <img src="/static/Assets/Learning Icon.png"/>
             </div>
                 <h3>Read Stories & <br>
                     Share Your Ideas,
@@ -78,13 +32,13 @@
         </div>
         <div class="secondsection">
             <div class="secondfirstimg">
-                <img src="/frontend/Assets/index_background.jpg" alt="notebook"/>
+                <img src="/static/Assets/index_background.jpg" alt="notebook"/>
             </div>
             <div class="textparagraph">
                <p> A place to read, write, and deepen your understanding.</p>
             </div>
             <div class="secondimg">
-                <img src="/frontend/Assets/thinking_boy.png" alt="thinking_boy"/>
+                <img src="/static/Assets/thinking_boy.png" alt="thinking_boy"/>
             </div>
         </div>
     </div>
