Updated folder structure

--- a/templates/Addblog.html
+++ b/templates/Addblog.html
@@ -7,6 +7,35 @@
     <link rel="stylesheet" href="/frontend/css/Addblog.css" />
 </head>
 <body>
+     <div class="header">
+        <a href="/frontend/html/"> 
+        <div class="leftsection">
+            <div class="logo">
+                <img src="/frontend/Assets/favicon.ico" alt="BMS Logo" />
+            </div>
+            <div class="text">
+                Digital Pathshala
+            </div>
+        </div>
+        </a>
+        <div class="hamburger">
+            <span></span>
+            <span></span>
+            <span></span>
+        </div>
+        <div class="rightsection">
+            <div class="nav">
+                <ul>
+                    <li><a href="#about">About Us</a></li> |
+                    <li><a href="#blogs">Blogs</a></li> |
+                   <li><a href="/frontend/html/add-blog.html">Write</a></li> |
+                    <li><a href="/frontend/html/login.html">Log-In</a></li> |
+                    <li><a href="#getstarted" class="getstarted-btn">Get Started</a></li>
+                </ul>
+            </div>
+        </div>
+    
+     </div>
     <div class="navbar">
         <ul>
             <li><a href="Addblog.html" class="active">Add Blog</a></li>
