--- a/templates/Addblog.html
+++ b/templates/Addblog.html
@@ -1,17 +1,19 @@
+{% load static %}
 <!DOCTYPE html>
 <html lang="en">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Add Blog Page</title>
-    <link rel="stylesheet" href="/frontend/css/Addblog.css" />
+    <link rel="stylesheet" href="/static/css/Addblog.css" />
 </head>
 <body>
+{% include 'layout/header.html' %}
     <div class="navbar">
         <ul>
-            <li><a href="Addblog.html" class="active">Add Blog</a></li>
-            <li><a href="UpdateBlog.html">Update Blog</a></li>
-            <li><a href="bloglist.html">Blog List</a></li>
+            <li><a href="/add-blog-admin" class="active">Add Blog</a></li>
+            <li><a href="/update-blog-admin">Update Blog</a></li>
+            <li><a href="/view-blog-list">Blog List</a></li>
         </ul>
     </div>
     <div class="add-blog-container">
@@ -43,6 +45,6 @@
             </div>
         </form>
     </div>
-    <script src="AddBlog.js"></script>
+    <script src="/static/js/AddBlog.js"></script>
 </body>
-</html> 
+</html>
