--- a/templates/add-blog.html
+++ b/templates/add-blog.html
@@ -8,11 +8,10 @@
     <title>Add Blog Page</title>
     <link rel="stylesheet" href="/static/css/add-blog.css" />
     <link rel="shortcut icon" href="/static/Assets/favicon.ico" type="image/x-icon">
-    <script defer src="/static/js/script.js"></script>
 </head>
 
 <body>
-    {% include "header.html" %}
+    {% include "layout/header.html" %}
 
     <div class="body">
         <div class="topaddsection">
