--- a/templates/blog.html
+++ b/templates/blog.html
@@ -9,7 +9,7 @@
 </head>
 <body>
 
-  {% include "header.html" %}
+  {% include "layout/header.html" %}
   <div class="layout">
 
     <!-- Main Blog Content -->
