--- a/templates/login.html
+++ b/templates/login.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <title>Login Page</title>
-    <link rel="stylesheet" href="../css/login.css" />
+    <link rel="stylesheet" href="/static/css/login.css" />
 </head>
 <body>
     <div class="bubble bubble1"></div>
@@ -16,7 +16,7 @@
     <div class="bubble bubble7"></div>
     <div class="container">
         <div class="logo">
-            <img src="/frontend/Assets/Digital Pathshala logo.jpg" alt="Blog Website Logo" style="width:130px; height:130px; object-fit:contain; display:block; margin:0 auto;" />
+            <img src="/static/Assets/Digital Pathshala logo.jpg" alt="Blog Website Logo" style="width:130px; height:130px; object-fit:contain; display:block; margin:0 auto;" />
         </div>
         <h1>Sign in to BMS</h1>
         <div class="subtitle">Access your account and manage your blogs!</div>
@@ -40,7 +40,7 @@
             <div class="divider-line"></div>
         </div>
         <button class="google-btn" type="button">
-            <img src="/frontend/Assets/Google logo.png" alt="Google logo" class="google-icon" />
+            <img src="/static/Assets/Google logo.png" alt="Google logo" class="google-icon" />
             Log in with Google
         </button>
         <div class="footer">
