--- a/static/css/Addblog.css
+++ b/static/css/Addblog.css
@@ -12,6 +12,7 @@ body {
     padding: 0 32px;
     margin: 32px auto 24px auto;
     max-width: 900px;
+    margin-top: 160px;
 }
 .navbar ul {
     list-style: none;
@@ -168,4 +169,4 @@ body {
     .navbar {
         max-width: 100vw;
     }
-} 
+}
