--- a/static/css/updateblog.css
+++ b/static/css/updateblog.css
@@ -12,6 +12,7 @@ body {
     padding: 0 32px;
     margin: 32px auto 24px auto;
     max-width: 900px;
+    margin-top: 160px;
 }
 .navbar ul {
     list-style: none;
@@ -19,6 +20,7 @@ body {
     gap: 32px;
     padding: 0;
     margin: 0;
+    margin-top: 160px;
     border-bottom: 2px solid #e0e0e0;
 }
 .navbar li {
