--- a/templates/pages/index.html
+++ b/templates/pages/index.html
@@ -6,14 +6,14 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Home Page</title>
-    <link rel="Stylesheet" href="/static/css/styles.css" />
+    <link rel="Stylesheet" href=" {% static 'static/css/styles.css' %}"  />
     <link rel="shortcut icon" href="/static/Assets/favicon.ico" type="image/x-icon">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css">
     
 </head>
 
 <body>
-    {% include "header.html" %}
+    {% include "layout/header.html" %}
     <!-- Start Body -->
     <div class="body">
         <div class="firstsection">
