--- a/templates/updateblog.html
+++ b/templates/updateblog.html
@@ -1,17 +1,19 @@
+{%load static%}
 <!DOCTYPE html>
 <html lang="en">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Update Blog Page</title>
-    <link rel="stylesheet" href="/frontend/css/updateblog.css" />
+    <link rel="stylesheet" href="/static/css/updateblog.css" />
 </head>
+{% include 'layout/header.html' %}
 <body>
     <div class="navbar">
         <ul>
-            <li><a href="AddBlog.html">Add Blog</a></li>
-            <li><a href="UpdateBlog.html" class="active">Update Blog</a></li>
-            <li><a href="bloglist.html">Blog List</a></li>
+            <li><a href="/add-blog-admin" >Add Blog</a></li>
+            <li><a href="/update-blog-admin" class="active" >Update Blog</a></li>
+            <li><a href="/view-blog-list">Blog List</a></li>
         </ul>
     </div>
     <div class="update-blog-container">
