profile page added

--- a/static/css/profile.css
+++ b/static/css/profile.css
@@ -3,6 +3,7 @@ body {
     background:  #faf9f6; 
     margin: 0;
     font-family: 'Poppins', sans-serif;
+    margin-top: 160px;
 }
 
 .profile-main-container {
