--- a/templates/profile.html
+++ b/templates/profile.html
@@ -1,3 +1,4 @@
+{% load static %}
 <!DOCTYPE html>
 <html lang="en">
 <head>
@@ -10,6 +11,7 @@
     <link rel="stylesheet" href="/static/css/profile.css">
 </head>
 <body>
+    {% include "header.html" %}
     <div class="profile-main-container">
         <h1 class="profile-title">User Profile Overview</h1>
         <div class="profile-flex">
