--- a/static/css/add-blog.css
+++ b/static/css/add-blog.css
@@ -10,7 +10,7 @@
     --secondary-color: #626161;
     --text-color: #3a3a3a;
     --background-color: #f0fff4;
-    --border-color: #e9ecef;
+    --border-color: #333;
     --shadow-color: rgba(0, 0, 0, 0.435);
     --editor-bg: #ffffff;
     --toolbar-bg: #f8f9fa;
