--- a/templates/signup.html
+++ b/templates/signup.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="../css/signup.css">
+    <link rel="stylesheet" href="/static/css/signup.css">
     <title>SignUp Page</title>
 </head>
 <body>
@@ -16,7 +16,7 @@
   <div class="bubble bubble7"></div>
   <div class="container">
     <div class="logo">
-      <img src="/frontend/Assets/Digital Pathshala logo.jpg" alt="Blog Website Logo" style="width:130px; height:130px; object-fit:contain; display:block; margin:0 auto;" />
+      <img src="/static/Assets/Digital Pathshala logo.jpg" alt="Blog Website Logo" style="width:130px; height:130px; object-fit:contain; display:block; margin:0 auto;" />
     </div>
     <h1>Welcome to BMS!</h1>
     <div class="subtitle">Create your account to manage your blogs!!</div>
