--- a/templates/layout/header.html
+++ b/templates/layout/header.html
@@ -365,8 +365,8 @@ ul li a:hover:after {
                     <li><a href="/about-us">About Us</a></li> |
                     <li><a href="/blogs">Blogs</a></li> |
                    <li><a href="/add-blog">Write</a></li> |
-                    <li><a href="/log-in">Log-In</a></li> |
-                    <li><a href="/sign-up" class="getstarted-btn">Get Started</a></li>
+                    <li><a href="/auth/log-in">Log-In</a></li> |
+                    <li><a href="/auth/sign-up" class="getstarted-btn">Get Started</a></li>
                 </ul>
             </div>
         </div>
