--- a/static/css/login.css
+++ b/static/css/login.css
@@ -8,56 +8,7 @@ body {
       align-items: center;
       min-height: 100vh;
       position: relative;
-      overflow: hidden;
-    }
-    .bubble {
-      position: absolute;
-      background: #7ba238;
-      opacity: 0.18;
-      border-radius: 50%;
-      z-index: 0;
-    }
-    .bubble1 {
-      width: 160px;
-      height: 160px;
-      top: 30px;
-      left: -60px;
-    }
-    .bubble2 {
-      width: 60px;
-      height: 60px;
-      bottom: 80px;
-      right: 40px;
-    }
-    .bubble3 {
-      width: 32px;
-      height: 32px;
-      top: 70%;
-      left: 18%;
-    }
-    .bubble4 {
-      width: 100px;
-      height: 100px;
-      top: 20%;
-      right: 10%;
-    }
-    .bubble5 {
-      width: 50px;
-      height: 50px;
-      bottom: 150px;
-      left: 25%;
-    }
-    .bubble6 {
-      width: 80px;
-      height: 80px;
-      top: 60%;
-      right: 25%;
-    }
-    .bubble7 {
-      width: 40px;
-      height: 40px;
-      bottom: 40px;
-      left: 10%;
+      overflow: auto;
     }
     .container {
       width: 500px;
