Updated Header in Login/Signup

--- a/templates/signup.html
+++ b/templates/signup.html
@@ -6,6 +6,9 @@
     <link rel="stylesheet" href="/static/css/signup.css">
     <title>SignUp Page</title>
 </head>
+
+<
+{% include "layout/header.html" %}
 <body>
   <div class="container">
     <div class="logo">
