--- a/templates/login.html
+++ b/templates/login.html
@@ -6,6 +6,8 @@
     <title>Login Page</title>
     <link rel="stylesheet" href="/static/css/login.css" />
 </head>
+
+{% include "layout/header.html" %}
 <body>
     <div class="container">
         <div class="logo">
